# philosophers

./: CMakeLists.txt  Makefile  philosophers
includes/: philosophers.h
libft/: Makefile  ft_atod.c  ft_atof.c  ft_atoi.c  ft_atol.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_printf.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_printf.c  ft_printf_utils.c  ft_printf_utils2.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_striteri.c  (+15 more)
srcs/: ft_philo_ft.c  main.c  struc.c
